# gpudetect

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: status_update.yaml  tests.yaml
src/gpudetect/: __init__.py  __main__.py  gpudetect.py
tests/: test_gpudetect.py
