[project]
license = { file = "LICENSE" }
name = "gpudetect"
version = "0.0.1"
description = "Generic platform independent GPU detection librar"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "derUli", email = "schwein@uli-s-musikprojekt.de" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "GPUtil",
    "pyadl",
    "pylspci"
]

[project.urls]
"Homepage" = "https://github.com/derUli/gpudetect"
"Source" = "https://github.com/derUli/gpudetect"
"Bug Reports" = "https://github.com/derUli/gpudetect/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=test_proj"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
